Scaffold composer.json to require-dev Behat

--- a/templates/composer.mustache
+++ b/templates/composer.mustache
@@ -7,5 +7,8 @@
     "autoload": {
         "files": [ "command.php" ]
     },
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "behat/behat": "~2.5"
+    }
 }
