Generate Using section for package readme based on package docs

--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -7,7 +7,7 @@
 [![Build Status](https://travis-ci.org/{{package_name}}.svg?branch=master)](https://travis-ci.org/{{package_name}})
 {{/has_travis}}
 
-Quick links: [Installing](#installing) | [Contributing](#contributing)
+Quick links: [Installing](#installing) {{#has_commands}}|[Using](#using){{/has_commands}}| [Contributing](#contributing)
 
 ## Installing
 
@@ -15,6 +15,19 @@ This package requires the latest nightly version of WP-CLI. Update with `wp cli 
 
 Once you've done so, you can install this package with `wp package install {{package_name}}`
 
+{{#has_commands}}
+## Using
+
+{{#commands}}
+### {{name}}
+
+{{description}}
+
+{{synopsis}}
+
+{{/commands}}
+
+{{/has_commands}}
 ## Contributing
 
 Code and ideas are more than welcome.
