Include the rest of the documentation

--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -26,12 +26,14 @@ This package implements the following commands:
 {{#has_multiple_commands}}
 ### {{name}}
 
-{{description}}
+{{shortdesc}}
 {{/has_multiple_commands}}
 
 ~~~
 {{synopsis}}
 ~~~
+
+{{longdesc}}
 
 {{/commands}}
 
