Reposition quicklinks too

--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -7,7 +7,7 @@
 [![Build Status](https://travis-ci.org/{{package_name}}.svg?branch=master)](https://travis-ci.org/{{package_name}})
 {{/has_travis}}
 
-Quick links: [Installing](#installing) {{#has_commands}}| [Using](#using){{/has_commands}} | [Contributing](#contributing)
+Quick links: {{#has_commands}}[Using](#using) | {{/has_commands}}[Installing](#installing) | [Contributing](#contributing)
 
 {{#has_commands}}
 ## Using
