Update install instructions to reflect latest WP-CLI release

--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -33,7 +33,7 @@ This package implements the following commands:
 {{/has_commands}}
 ## Installing
 
-This package requires the latest nightly version of WP-CLI. Update with `wp cli update --nightly`.
+Installing this package requires WP-CLI v0.23.0 or greater. Update to the latest stable release with `wp cli update`.
 
 Once you've done so, you can install this package with `wp package install {{package_name}}`
 
