Add the trailing period

--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -35,7 +35,7 @@ This package implements the following commands:
 
 Installing this package requires WP-CLI v0.23.0 or greater. Update to the latest stable release with `wp cli update`.
 
-Once you've done so, you can install this package with `wp package install {{package_name}}`
+Once you've done so, you can install this package with `wp package install {{package_name}}`.
 
 ## Contributing
 
