Include 'homepage' in composer.json by default

--- a/templates/composer.mustache
+++ b/templates/composer.mustache
@@ -1,6 +1,7 @@
 {
     "name": "{{name}}",
     "description": "{{description}}",
+    "homepage": "{{homepage}}",
     "license": "{{license}}",
     "authors": [],
     "minimum-stability": "dev",
