Support specifying required WP-CLI version in composer.json
This should be automatically reflected in the README's Installing
section

--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -33,7 +33,7 @@ This package implements the following commands:
 {{/has_commands}}
 ## Installing
 
-Installing this package requires WP-CLI v0.23.0 or greater. Update to the latest stable release with `wp cli update`.
+Installing this package requires WP-CLI {{required_wp_cli_version}} or greater. Update to {{wp_cli_update_to_instructions}}.
 
 Once you've done so, you can install this package with `wp package install {{package_name}}`.
 
