--- a/templates/composer.mustache
+++ b/templates/composer.mustache
@@ -8,7 +8,9 @@
     "autoload": {
         "files": [ "command.php" ]
     },
-    "require": {},
+    "require": {
+        "wp-cli/wp-cli": "~0.23.0"
+    },
     "require-dev": {
         "behat/behat": "~2.5"
     }
