--- a/templates/composer.mustache
+++ b/templates/composer.mustache
@@ -9,7 +9,7 @@
         "files": [ "command.php" ]
     },
     "require": {
-        "wp-cli/wp-cli": "~0.23.0"
+        "wp-cli/wp-cli": "{{require_wp_cli}}"
     },
     "require-dev": {
         "behat/behat": "~2.5"
