--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -3,9 +3,7 @@
 
 {{package_description}}
 
-{{#has_travis}}
-[![Build Status](https://travis-ci.org/{{package_name}}.svg?branch=master)](https://travis-ci.org/{{package_name}})
-{{/has_travis}}
+{{build_status}}
 
 Quick links: {{#has_using}}[Using](#using) | {{/has_using}}{{#has_installing}}[Installing](#installing) | {{/has_installing}}{{#has_contributing}}[Contributing](#contributing){{/has_contributing}}
 
