Support custom shields for the top of the README
This will let projects more easily add private Circle badges, for
instance.

--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -3,7 +3,7 @@
 
 {{package_description}}
 
-{{build_status}}
+{{shields}}
 
 Quick links: {{#has_using}}[Using](#using) | {{/has_using}}{{#has_installing}}[Installing](#installing) | {{/has_installing}}{{#has_contributing}}[Contributing](#contributing){{/has_contributing}}
 
