--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -5,24 +5,12 @@
 
 {{shields}}
 
-Quick links: {{#has_using}}[Using](#using) | {{/has_using}}{{#has_installing}}[Installing](#installing) | {{/has_installing}}{{#has_contributing}}[Contributing](#contributing){{/has_contributing}}
+{{quick_links}}
 
-{{#has_using}}
-## Using
+{{#sections}}
+## {{heading}}
 
-{{using_section}}
-{{/has_using}}
-
-{{#has_installing}}
-## Installing
-
-{{installing_section}}
-{{/has_installing}}
-
-{{#has_contributing}}
-## Contributing
-
-{{contributing_section}}
-{{/has_contributing}}
+{{body}}
+{{/sections}}
 
 *This README.md is generated dynamically from the project's codebase using `wp scaffold package-readme` ([doc](https://github.com/wp-cli/scaffold-package-command#wp-scaffold-package-readme)). To suggest changes, please submit a pull request against the corresponding part of the codebase.*
