--- a/templates/readme.mustache
+++ b/templates/readme.mustache
@@ -14,4 +14,6 @@
 
 {{/sections}}
 
+{{#show_powered_by}}
 *This README.md is generated dynamically from the project's codebase using `wp scaffold package-readme` ([doc](https://github.com/wp-cli/scaffold-package-command#wp-scaffold-package-readme)). To suggest changes, please submit a pull request against the corresponding part of the codebase.*
+{{/show_powered_by}}
