Include "type": "wp-cli-package" when scaffolding a new command

--- a/templates/composer.mustache
+++ b/templates/composer.mustache
@@ -1,6 +1,7 @@
 {
     "name": "{{name}}",
     "description": "{{description}}",
+    "type": "wp-cli-package",
     "homepage": "{{homepage}}",
     "license": "{{license}}",
     "authors": [],
