Prefer stable when scaffolding a new command

--- a/templates/composer.mustache
+++ b/templates/composer.mustache
@@ -6,6 +6,7 @@
     "license": "{{license}}",
     "authors": [],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "files": [ "command.php" ]
     },
