--- a/templates/readme-installing.mustache
+++ b/templates/readme-installing.mustache
@@ -1,3 +1,5 @@
 Installing this package requires WP-CLI {{required_wp_cli_version}} or greater. Update to {{wp_cli_update_to_instructions}}.
 
-Once you've done so, you can install this package with `wp package install {{package_name}}`.
+Once you've done so, you can install this package with:
+
+    wp package install git@github.com:{{package_name}}.git
