Scaffold a README for WP-CLI command requiring latest stable

--- a/templates/readme-installing.mustache
+++ b/templates/readme-installing.mustache
@@ -1,4 +1,4 @@
-Installing this package requires WP-CLI {{required_wp_cli_version}} or greater. Update to {{wp_cli_update_to_instructions}}.
+Installing this package {{wp_cli_requires_instructions}}. Update to {{wp_cli_update_to_instructions}}.
 
 Once you've done so, you can install this package with:
 
