Link to pull request guidelines in the PULL_REQUEST_TEMPLATE

--- a/templates/github-pull-request-template.mustache
+++ b/templates/github-pull-request-template.mustache
@@ -2,6 +2,8 @@
 
 Thanks for submitting a pull request!
 
+Please review our contributing guidelines if you haven't recently: https://make.wordpress.org/cli/handbook/contributing/#creating-a-pull-request
+
 Here's an overview to our process:
 
 1. One of the project committers will soon provide a code review.
