--- a/templates/readme-support.mustache
+++ b/templates/readme-support.mustache
@@ -1,1 +1,1 @@
-Github issues aren't for general support questions, but there are other venues you can try: http://wp-cli.org/#support
+Github issues aren't for general support questions, but there are other venues you can try: https://wp-cli.org/#support
