Adapt scaffolding logic

--- a/templates/command.mustache
+++ b/templates/command.mustache
@@ -13,3 +13,16 @@ $hello_world_command = function() {
 	WP_CLI::success( "Hello world." );
 };
 WP_CLI::add_command( 'hello-world', $hello_world_command );
+<?php
+
+if ( ! class_exists( 'WP_CLI' ) ) {
+	return;
+}
+
+$wpcli_hello_world_autoloader = __DIR__ . '/vendor/autoload.php';
+
+if ( file_exists( $wpcli_hello_world_autoloader ) ) {
+	require_once $wpcli_hello_world_autoloader;
+}
+
+WP_CLI::add_command( 'hello-world', '\WP_CLI\HelloWorld\HelloWorldCommand' );
