--- a/templates/hello-world-command.mustache
+++ b/templates/hello-world-command.mustache
@@ -1,6 +1,10 @@
 <?php
 
-if ( ! class_exists( 'WP_CLI' ) ) {
+namespace WP_CLI\HelloWorld;
+
+use WP_CLI;
+
+if ( ! class_exists( '\WP_CLI' ) ) {
 	return;
 }
 
@@ -25,4 +29,4 @@ if ( file_exists( $wpcli_hello_world_autoloader ) ) {
 	require_once $wpcli_hello_world_autoloader;
 }
 
-WP_CLI::add_command( 'hello-world', '\WP_CLI\HelloWorld\HelloWorldCommand' );
+WP_CLI::add_command( 'hello-world', HelloWorldCommand::class );
