Make hello-world work without WP

--- a/templates/HelloWorldCommand.mustache
+++ b/templates/HelloWorldCommand.mustache
@@ -16,6 +16,8 @@ class HelloWorldCommand extends WP_CLI_Command {
 	 *     $ wp hello-world
 	 *     Success: Hello World!
 	 *
+	 * @when before_wp_load
+	 *
 	 * @param array $args       Indexed array of positional arguments.
 	 * @param array $assoc_args Associative array of associative arguments.
 	 */
