--- a/templates/composer.mustache
+++ b/templates/composer.mustache
@@ -14,6 +14,6 @@
         "wp-cli/wp-cli": "{{require_wp_cli}}"
     },
     "require-dev": {
-        "behat/behat": "~2.5"
+        "wp-cli/wp-cli-tests": "^3.0.11"
     }
 }
