Add featured commands in readme

--- a/templates/readme-using.mustache
+++ b/templates/readme-using.mustache
@@ -1,4 +1,13 @@
 {{#has_commands}}
+{{#has_featured_commands}}
+
+**Featured Commands:**
+
+{{#featured_commands}}
+- [{{title}}]({{url}})
+{{/featured_commands}}
+
+{{/has_featured_commands}}
 {{#has_multiple_commands}}
 
 This package implements the following commands:
