--- a/templates/readme-contributing.mustache
+++ b/templates/readme-contributing.mustache
@@ -20,4 +20,4 @@ Once you've decided to commit the time to seeing your pull request through, [ple
 
 ### License
 
-This project is licensed under the MIT License. See the [LICENSE](LICENSE) file for details.
+This project is licensed under the {{license}} License. See the [LICENSE](LICENSE) file for details.
